sonarqube/sonarqube-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: sonarqube
  namespace: sonarqube
  labels:
    app: sonarqube
spec:
  replicas: 1
  selector:
    matchLabels:
      app: sonarqube
  template:
    metadata:
      labels:
        app: sonarqube
    spec:
      securityContext:
        fsGroup: 1000
      containers:
        - name: sonarqube
          image: sonarqube:community
          ports:
            - containerPort: 9000
          resources:
            requests:
              memory: "1Gi"
              cpu: "250m"
            limits:
              memory: "2Gi"
              cpu: "500m"

      #     volumeMounts:
      #       - name: sonarqube-data
      #         mountPath: /opt/sonarqube/data
      # volumes:
      #   - name: sonarqube-data
      #     persistentVolumeClaim:
      #       claimName: sonarqube-pvcc
