sonarqube/sonarqube-service-lb.yaml
apiVersion: v1
kind: Service
metadata:
  name: sonarqube-lb
  namespace: sonarqube
spec:
  type: LoadBalancer
  ports:
    - port: 9000
      targetPort: 9000
      protocol: TCP
  selector:
    app: sonarqube
