sonarqube/sonarqube-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: sonarqube
  namespace: sonarqube
spec:
  selector:
    app: sonarqube
  ports:
    - port: 9000
      targetPort: 9000
  type: ClusterIP #to be changed to LoadBalancer if you want to access it from outside the cluster
  # type: LoadBalancer
